<resources>
    <string name="app_name">MyCalc</string>
    <string name="value">value</string>
    <string name="type_a_number">Type a number</string>
    <string name="str_first_number">First number</string>
    <string name="str_second_number">Second number</string>
    <string name="plus_btn">+</string>
    <string name="min_btn">-</string>
    <string name="div_btn">/</string>
    <string name="multi_btn">*</string>
    <string name="res">Result</string>
    <string name="str_enter_first_number">Pls Enter first number</string>
    <string name="str_enter_second_number">Pls Enter second number</string>
    <string name="_0">0</string>
    <string name="str_start">Start</string>
    <string name="str_Your_guess">Your Guess</string>
    <string name="str_go">Go</string>
    <string name="str_report">Report</string>
    <string name="str_result">Result</string>
    <string name="str_enter_number">Enter a number</string>
    <string name="your_guess_is_correct">Your guess is correct</string>
    <string name="greater_than">Greater than</string>
    <string name="less_than">Less than</string>

</resources>